# IIFA_Economics_Auto-tests_v.0.3

./: .gitignore  allure_list.md  config_example.py  conftest.py  new_version_ideas.md  pyproject.toml  pytest_list.md  readme.md
files/: 3_Orenburg_macro_22_6Б_06_10+(1).las  Gazprom-Neft_Upstream_v22.6Б.xml  Gazprom-Neft_Upstream_v22.6Б_NDD.xml  NDD.xml  NDPI.xml  files_list.py  МК_Upstream_v22.6Б_6+6_Кувайский.xlsx  МК_Upstream_v22.6Б_6+6_ЮУНГ_Бурение_3_51.xlsx
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
locators/: calculation_constructor_locators.py  guide_locators.py  report_locators.py  wifi_locators.py
pages/: base_page.py  calculation_constructor_page.py  guide_page.py  sign_in_page.py  wifi_page.py
tests/: test.py  test_calculation_constructor.py  test_guides.py  test_sandbox.py  test_wifi.py  tests.py
tests/allure-results/: 0055f007-5dd7-42e1-9ae3-638ce1d6b53f-container.json  0062cd3c-5d6c-4875-9055-77b7cd75a9ab-container.json  0084b9a0-11b2-47a4-b3c3-aeaf29acf79d-container.json  0085ca2b-814a-4c77-8016-f3bd85cea15f-container.json  00bbe9b4-a123-4cc7-8a0f-3623332e37f8-container.json  013dc177-620a-43c0-8d5d-a60b40cfd2ed-container.json  0142a2bf-7522-4938-8fd2-b98faac9da17-container.json  01d459d5-2101-49f4-abce-1018a2edf955-container.json  0233b5d9-56a0-4616-b6e3-df76c243e9c7-container.json  02a121e5-1d76-46ff-999d-c2b8490eeb0c-result.json  03596f7a-727c-4795-b9c9-af2036470bb0-result.json  04070d9c-e5a2-4f39-ade2-c59073e35e1d-result.json  046e7986-799c-4f52-a20f-53e47db2863e-container.json  (+1209 more)
(+764 files in other folders)
