[tool.poetry]
name = "iifa-economics-auto-tests-v-0-3"
version = "0.1.0"
description = ""
authors = ["dpodolny <dpodolny@nntc.pro>"]
readme = "README.md"
packages = [{include = "iifa_economics_auto_tests_v"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
allure-pytest = "^2.12.0"
selenium = "^4.8.0"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
